Update `UserController` to Javalin 4
The `Context#queryParam` syntax changed, which required making a number of changes.

I also added error messages to all the `.check()` calls in the validators.